Fixed width and spacing in plain text email (#278)

--- a/dev/Styles/MessageView.less
+++ b/dev/Styles/MessageView.less
@@ -333,6 +333,8 @@ html.rl-no-preview-pane {
 					&.plain {
 
 						padding: 15px;
+						white-space: pre-wrap;
+						font-family: Monaco, Menlo, Consolas, 'Courier New', monospace;
 
 						pre {
 							margin: 0px;
