--- a/dev/Styles/_CkeFix.less
+++ b/dev/Styles/_CkeFix.less
@@ -14,6 +14,7 @@
 	padding: 10px;
 	padding-right: 0;
 	/*font-family: arial, sans-serif;*/
+	white-space: pre-wrap;
 	font-family: Monaco, Menlo, Consolas, 'Courier New', monospace;
 	font-size: 13px;
 	line-height: 16px;
